[gd_scene load_steps=7 format=3 uid="uid://w60qawkpqiyb"]

[ext_resource type="Script" path="res://scripts/tree.gd" id="1_yjf6h"]
[ext_resource type="Texture2D" uid="uid://cx47mvxn04cwj" path="res://Assets/tree.png" id="2_l77b2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoe67"]
size = Vector2(22.5, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_e5mms"]
radius = 53.1507

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vk6jd"]
bg_color = Color(0.772549, 0.176471, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3v2l"]
bg_color = Color(0.027451, 0.176471, 0.792157, 1)

[node name="tree" type="StaticBody2D"]
script = ExtResource("1_yjf6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_l77b2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_aoe67")
debug_color = Color(0.105882, 0.568627, 0.831373, 0.462745)

[node name="areaTree" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaTree"]
visible = false
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_e5mms")
debug_color = Color(0.58273, 0.425243, 0.898826, 0.42)

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -33.0
offset_top = -56.0
offset_right = 32.0
offset_bottom = -53.0
theme_override_styles/background = SubResource("StyleBoxFlat_vk6jd")
theme_override_styles/fill = SubResource("StyleBoxFlat_j3v2l")
value = 50.0
show_percentage = false

[connection signal="body_entered" from="areaTree" to="." method="_on_area_tree_body_entered"]
[connection signal="body_exited" from="areaTree" to="." method="_on_area_tree_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
